--- a/packages/3.x/Di/auto.html
+++ b/packages/3.x/Di/auto.html
@@ -13,7 +13,7 @@ title: Auto-Resolution Of Constructor Parameters
         <tr>
             <td class="prev"><a href="/packages/3.x/Di/config.html">Container Builder and Config Classes</a></td>
             <td class="parent">1.1. Aura.Di</th>
-            <td class="next"><a href="/packages/3.x/Payload.html">Aura.Payload</a></td>
+            <td class="next"><a href="/packages/3.x/Di/migrating.html">Migrating from 2.x to 3.x</a></td>
         </tr>
     </table>
 </nav>
@@ -91,12 +91,12 @@ $di-&gt;params['OtherClass']['db'] = $di-&gt;lazyGet('other_connection');
         <tr>
             <td class="prev"><a href="/packages/3.x/Di/config.html">Prev</a></td>
             <td class="parent"><a href="/packages/3.x/Di/">Up</a></td>
-            <td class="next"><a href="/packages/3.x/Payload.html">Next</a></td>
+            <td class="next"><a href="/packages/3.x/Di/migrating.html">Next</a></td>
         </tr>
         <tr>
             <td class="prev">1.1.8. Container Builder and Config Classes</td>
             <td class="parent">1.1. Aura.Di</td>
-            <td class="next">1.2. Aura.Payload</td>
+            <td class="next">1.1.10. Migrating from 2.x to 3.x</td>
         </tr>
     </table>
 </nav>
