--- a/packages/3.x/index.html
+++ b/packages/3.x/index.html
@@ -21,8 +21,98 @@ title: Version 3.x
 <h1>1. Version 3.x</h1>
 <dl>
 <dt>1.1. <a href="/packages/3.x/Di/">Aura.Di</a></dt>
+<dd><dl>
+<dt>1.1.1. <a href="/packages/3.x/Di/getting-started.html#1-1-1">Getting Started</a></dt>
+<dd><dl>
+<dt>1.1.1.1. <a href="/packages/3.x/Di/getting-started.html#1-1-1-1">Overview</a></dt>
+<dt>1.1.1.2. <a href="/packages/3.x/Di/getting-started.html#1-1-1-2">Container Instantiation</a></dt>
+<dt>1.1.1.3. <a href="/packages/3.x/Di/getting-started.html#1-1-1-3">Creating Object Instances</a></dt>
+</dl></dd>
+<dt>1.1.2. <a href="/packages/3.x/Di/constructor.html#1-1-2">Constructor Injection</a></dt>
+<dt>1.1.3. <a href="/packages/3.x/Di/setter.html#1-1-3">Setter Injection</a></dt>
+<dt>1.1.4. <a href="/packages/3.x/Di/inheritance.html#1-1-4">Class, Interface, and Trait Inheritance</a></dt>
+<dd><dl>
+<dt>1.1.4.1. <a href="/packages/3.x/Di/inheritance.html#1-1-4-1">Class Inheritance</a></dt>
+<dt>1.1.4.2. <a href="/packages/3.x/Di/inheritance.html#1-1-4-2">Interface And Trait Inheritance</a></dt>
+</dl></dd>
+<dt>1.1.5. <a href="/packages/3.x/Di/services.html#1-1-5">Services</a></dt>
+<dt>1.1.6. <a href="/packages/3.x/Di/lazy.html#1-1-6">Lazy Injection</a></dt>
+<dd><dl>
+<dt>1.1.6.1. <a href="/packages/3.x/Di/lazy.html#1-1-6-1">Lazy Instances</a></dt>
+<dt>1.1.6.2. <a href="/packages/3.x/Di/lazy.html#1-1-6-2">Lazy Services</a></dt>
+<dt>1.1.6.3. <a href="/packages/3.x/Di/lazy.html#1-1-6-3">Lazy Values</a></dt>
+<dt>1.1.6.4. <a href="/packages/3.x/Di/lazy.html#1-1-6-4">Lazy Include and Require</a></dt>
+<dt>1.1.6.5. <a href="/packages/3.x/Di/lazy.html#1-1-6-5">Generic Lazy Calls</a></dt>
+</dl></dd>
+<dt>1.1.7. <a href="/packages/3.x/Di/factories.html#1-1-7">Instance Factories</a></dt>
+<dt>1.1.8. <a href="/packages/3.x/Di/config.html#1-1-8">Container Builder and Config Classes</a></dt>
+<dt>1.1.9. <a href="/packages/3.x/Di/auto.html#1-1-9">Auto-Resolution Of Constructor Parameters</a></dt>
+<dd><dl>
+<dt>1.1.9.1. <a href="/packages/3.x/Di/auto.html#1-1-9-1">Auto-Resolving From Concrete Typehints</a></dt>
+<dt>1.1.9.2. <a href="/packages/3.x/Di/auto.html#1-1-9-2">Auto-Resolving From Abstract and Interface Typehints</a></dt>
+<dt>1.1.9.3. <a href="/packages/3.x/Di/auto.html#1-1-9-3">Auto-Resolving to Services</a></dt>
+<dt>1.1.9.4. <a href="/packages/3.x/Di/auto.html#1-1-9-4">Overriding Auto-Resolution</a></dt>
+</dl></dd>
+<dt>1.1.10. <a href="/packages/3.x/Di/migrating.html#1-1-10">Migrating from 2.x to 3.x</a></dt>
+<dd><dl>
+<dt>1.1.10.1. <a href="/packages/3.x/Di/migrating.html#1-1-10-1">BC Breaks</a></dt>
+<dt>1.1.10.2. <a href="/packages/3.x/Di/migrating.html#1-1-10-2">Features</a></dt>
+</dl></dd>
+</dl></dd>
 <dt>1.2. <a href="/packages/3.x/Payload.html#1-2">Aura.Payload</a></dt>
+<dd><dl>
+<dt>1.2.1. <a href="/packages/3.x/Payload.html#1-2-1">Getting Started</a></dt>
+<dt>1.2.2. <a href="/packages/3.x/Payload.html#1-2-2">Methods</a></dt>
+<dt>1.2.3. <a href="/packages/3.x/Payload.html#1-2-3">Status Values</a></dt>
+<dt>1.2.4. <a href="/packages/3.x/Payload.html#1-2-4">Example</a></dt>
+</dl></dd>
 <dt>1.3. <a href="/packages/3.x/Router/">Aura.Router</a></dt>
+<dd><dl>
+<dt>1.3.1. <a href="/packages/3.x/Router/getting-started.html#1-3-1">Getting Started</a></dt>
+<dd><dl>
+<dt>1.3.1.1. <a href="/packages/3.x/Router/getting-started.html#1-3-1-1">Adding A Route</a></dt>
+<dt>1.3.1.2. <a href="/packages/3.x/Router/getting-started.html#1-3-1-2">Matching A Request To A Route</a></dt>
+<dt>1.3.1.3. <a href="/packages/3.x/Router/getting-started.html#1-3-1-3">Dispatching A Route</a></dt>
+<dt>1.3.1.4. <a href="/packages/3.x/Router/getting-started.html#1-3-1-4">Handling Failure To Match</a></dt>
+</dl></dd>
+<dt>1.3.2. <a href="/packages/3.x/Router/defining-routes.html#1-3-2">Defining Routes</a></dt>
+<dd><dl>
+<dt>1.3.2.1. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-1">Placeholder Tokens and Default Values</a></dt>
+<dt>1.3.2.2. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-2">Optional Placeholder Tokens</a></dt>
+<dt>1.3.2.3. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-3">Wildcard Attributes</a></dt>
+<dt>1.3.2.4. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-4">Host Matching</a></dt>
+<dt>1.3.2.5. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-5">Accept Headers</a></dt>
+<dt>1.3.2.6. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-6">Multiple HTTP Verbs</a></dt>
+<dt>1.3.2.7. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-7">Secure Protocols</a></dt>
+<dt>1.3.2.8. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-8">Non-Routable Routes</a></dt>
+<dt>1.3.2.9. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-9">Authentication</a></dt>
+<dt>1.3.2.10. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-10">Custom Extras</a></dt>
+<dt>1.3.2.11. <a href="/packages/3.x/Router/defining-routes.html#1-3-2-11">Default Map Route Specifications</a></dt>
+</dl></dd>
+<dt>1.3.3. <a href="/packages/3.x/Router/attaching-route-groups.html#1-3-3">Attaching Route Groups</a></dt>
+<dt>1.3.4. <a href="/packages/3.x/Router/generating-paths.html#1-3-4">Generating Paths From Routes</a></dt>
+<dd><dl>
+<dt>1.3.4.1. <a href="/packages/3.x/Router/generating-paths.html#1-3-4-1">Optional Attributes</a></dt>
+<dt>1.3.4.2. <a href="/packages/3.x/Router/generating-paths.html#1-3-4-2">Wildcard Attributes</a></dt>
+</dl></dd>
+<dt>1.3.5. <a href="/packages/3.x/Router/custom-maps.html#1-3-5">Building Custom Maps and Routes</a></dt>
+<dd><dl>
+<dt>1.3.5.1. <a href="/packages/3.x/Router/custom-maps.html#1-3-5-1">Extending the Map Class</a></dt>
+<dt>1.3.5.2. <a href="/packages/3.x/Router/custom-maps.html#1-3-5-2">Extending The Route Class</a></dt>
+<dt>1.3.5.3. <a href="/packages/3.x/Router/custom-maps.html#1-3-5-3">Automated Route Caching and Building</a></dt>
+</dl></dd>
+<dt>1.3.6. <a href="/packages/3.x/Router/custom-matching.html#1-3-6">Custom Matching Rules</a></dt>
+<dd><dl>
+<dt>1.3.6.1. <a href="/packages/3.x/Router/custom-matching.html#1-3-6-1">Writing A Custom Rule</a></dt>
+<dt>1.3.6.2. <a href="/packages/3.x/Router/custom-matching.html#1-3-6-2">Setting Rules</a></dt>
+</dl></dd>
+<dt>1.3.7. <a href="/packages/3.x/Router/other-topics.html#1-3-7">Other Topics</a></dt>
+<dd><dl>
+<dt>1.3.7.1. <a href="/packages/3.x/Router/other-topics.html#1-3-7-1">Catchall Routes</a></dt>
+<dt>1.3.7.2. <a href="/packages/3.x/Router/other-topics.html#1-3-7-2">Logging</a></dt>
+<dt>1.3.7.3. <a href="/packages/3.x/Router/other-topics.html#1-3-7-3">Base Path</a></dt>
+</dl></dd>
+</dl></dd>
 </dl>
 
 <nav class="navfooter">
