--- a/packages/2.x/View.html
+++ b/packages/2.x/View.html
@@ -61,8 +61,9 @@ $view_registry-&gt;set('browse', '/path/to/views/browse.php');
 <pre><code class="language-php">&lt;?php
 foreach ($this-&gt;items as $item) {
     $id = htmlspecialchars($item['id'], ENT_QUOTES, 'UTF-8');
-    $name = htmlspecialchars($item['name'], ENT_QUOTES, 'UTF-8')
+    $name = htmlspecialchars($item['name'], ENT_QUOTES, 'UTF-8');
     echo "Item ID #{$id} is '{$name}'." . PHP_EOL;
+}
 ?&gt;
 </code></pre>
 <p>Note that we use <code>echo</code>, and not <code>return</code>, in templates.</p>
