--- a/packages/3.x/Di/index.html
+++ b/packages/3.x/Di/index.html
@@ -59,6 +59,21 @@ title: Aura.Di
 <dt>1.1.9.3. <a href="/packages/3.x/Di/auto.html#1-1-9-3">Auto-Resolving to Services</a></dt>
 <dt>1.1.9.4. <a href="/packages/3.x/Di/auto.html#1-1-9-4">Overriding Auto-Resolution</a></dt>
 </dl></dd>
+<dt>1.1.10. <a href="/packages/3.x/Di/migrating.html#1-1-10">Migrating from 2.x to 3.x</a></dt>
+<dd><dl>
+<dt>1.1.10.1. <a href="/packages/3.x/Di/migrating.html#1-1-10-1">BC Breaks</a></dt>
+<dd><dl>
+<dt>1.1.10.1.1. <a href="/packages/3.x/Di/migrating.html#1-1-10-1-1">Instantiation</a></dt>
+<dt>1.1.10.1.2. <a href="/packages/3.x/Di/migrating.html#1-1-10-1-2"><code>setter</code> vs <code>setters</code></a></dt>
+<dt>1.1.10.1.3. <a href="/packages/3.x/Di/migrating.html#1-1-10-1-3">Automatic Locking</a></dt>
+<dt>1.1.10.1.4. <a href="/packages/3.x/Di/migrating.html#1-1-10-1-4">Config vs ContainerConfig</a></dt>
+</dl></dd>
+<dt>1.1.10.2. <a href="/packages/3.x/Di/migrating.html#1-1-10-2">Features</a></dt>
+<dd><dl>
+<dt>1.1.10.2.1. <a href="/packages/3.x/Di/migrating.html#1-1-10-2-1">lazyGetCall()</a></dt>
+<dt>1.1.10.2.2. <a href="/packages/3.x/Di/migrating.html#1-1-10-2-2">Instance Factories</a></dt>
+</dl></dd>
+</dl></dd>
 </dl>
 
 <nav class="navfooter">
